crates/mun_compiler/src/snapshots/mun_compiler__diagnostics__tests__free_type_alias_error.snap
---
source: crates/mun_compiler/src/diagnostics.rs
expression: "compilation_errors(\"\\n\\ntype Foo;\")"
---
error: free type alias without type ref
 --> main.mun:3:1
  |
3 | type Foo;
  | ^^^^^^^^^ free type alias without type ref
  |
